@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-15T16:17:19Z",
-  "count_outdated" : 390,
-  "uniques_outdated" : 212,
-  "count" : 421,
-  "uniques" : 228,
+  "timestamp" : "2022-07-16T01:11:13Z",
+  "count_outdated" : 394,
+  "uniques_outdated" : 214,
+  "count" : 424,
+  "uniques" : 229,
   "clones" : [
-    {
-      "timestamp": "2022-07-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-07-02T00:00:00Z",
       "count": 2,
